homebrew, sbt オプションなど